--- a/visualization.html
+++ b/visualization.html
@@ -146,6 +146,14 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <a class="nav-link" href="./stat_summaries.html"> 
 <span class="menu-text">Statistical Summary Tables</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./chatGPT.html"> 
+<span class="menu-text">Advanced: Overview of AI tools and GitHub</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./additional.html"> 
+<span class="menu-text">Resource materials</span></a>
+  </li>  
 </ul>
           </div> <!-- /navcollapse -->
             <div class="quarto-navbar-tools">
